# Suggar-NEO

./: .env.example  .gitignore  README.md  bot.py  pyproject.toml  run-test.py
.github/workflows/: CI.yml  PR.yml
migrations/: env.py
migrations/versions/: 1a9f061420dc_string2text.py  21e12f10c0fd_add_blacklist.py  248bbf01ddfd_fix_db.py  2582cfe00a88_extend_player_meta.py  2991fd9f715e_user_data.py  2e711ddbe4c7_fishing_prompt.py  2fb137c0857a_add_fising_progress.py  6566a1745877_init.py  6b59df13df3b_str_len.py  75d99bc06d8f_fix_type.py  82a432ac66ce_add_insights.py  8e0e82953dde_fix_db.py  955a0e8e0d6d_extend_player_meta.py  9e9f70cb87ef_add_switch.py  abaa39427c6d_init.py  b509501ca994_fishing.py  cf061fbe3bba_init.py  e930847dfbee_str_fix.py
plugins/dump_tools/: __init__.py
plugins/fishing/: command.py  functions.py
plugins/fun/: __init__.py  auto.py  query.py  signin.py
plugins/manager_extensions/: __init__.py
plugins/nonebot_plugin_luoguluck/: __init__.py  event.py
src/plugins/chat_hooks/: __init__.py  chat_hook.py  models.py  utils.py
src/plugins/eco/: __init__.py  query.py  signin.py
src/plugins/fishing/: __init__.py  command.py  functions.py  models.py  pyd_models.py
src/plugins/fun/: __init__.py  auto.py  query.py  signin.py
src/plugins/manager/: __init__.py  add.py  auto_clean.py  ban.py  black.py  checker.py  fun_data.py  leave.py  list_black.py  pardon.py  rate.py  send.py  switch.py
src/plugins/menu/: commands.py  dark.css  manager.py  models.py  utils.py
src/plugins/menu/templates/: command.html  other.js  template.html
src/plugins/nonebot_plugin_luoguluck/: event.py  image.py
src/plugins/nonebot_plugin_suggarchat/: API.py  config.py  connection.py  matcher.py  utils.py
src/plugins/nonebot_plugin_suggarchat/handle/: chat.py
src/plugins/status/: __init__.py  status.py
suggar_utils/: config.py  dump_tools.py  rule.py  store.py  switch_models.py  utils.py  value.py
suggar_utils/blacklist/: black.py
suggar_utils/llm_tools/: manager.py
